5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1594_2425.log
== TEST (2019-04-04 16:03:14) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
print(round( ,3))
-- ERROR:
File "XXXX", line 3
    print(round( ,3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:03:23) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
print(round( ,3))
-- ERROR:
File "XXXX", line 3
    print(round( ,3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:03:28) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
-- ERROR:
File "XXXX", line 3
    print(round( ,3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:05:42) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
-- ERROR:
File "XXXX", line 3
    print(round( ,3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:05:48) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
-- ERROR:
File "XXXX", line 3
    print(round( ,3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:06:16) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
print(round(consumo,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:07) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
print(round(consumo,3)+texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo,3)+texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:26) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media(round(consumo,3)+texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media(round(consumo,3)+texto)
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:09) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media(round(consumo,3))
print(consumo + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media(round(consumo,3))
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:16) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media(round(consumo,3))
print(consumo + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media(round(consumo,3))
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:53) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo,3))
print(consumo + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(consumo + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:09:06) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
print(consumo + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(consumo + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:09:30) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var(consumo + texto)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var(consumo + texto)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:09:47) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=consumo + texto
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var=consumo + texto
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:10:10) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto=("km/l")
media=(round(consumo ,3))
var=consumo + texto
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var=consumo + texto
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:10:53) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto=("km/l")
media=(round(consumo ,3))
var= float(consumo) + texto
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var= float(consumo) + texto
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:11:07) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto=("km/l")
media=(round(consumo ,3))
var= float(consumo + texto)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var= float(consumo + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:11:37) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var= float(consumo + texto)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var= float(consumo + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:12:17) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=float(consumo + texto)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var=float(consumo + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:14:07) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=float(media + texto)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var=float(media + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:14:39) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=media + texto
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var=media + texto
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:15:29) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=media e texto
print(var)
-- ERROR:
File "XXXX", line 6
    var=media e texto
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:15:38) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=media and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:16:20) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var= media and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:18:53) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var= media and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:13) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var(media and texto)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var(media and texto)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:57) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=media and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:21:59) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=float(distancia/combustivel)
texto="km/l"
media=(round(consumo ,3))
var=media and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:26:05) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=round(distancia/combustivel ,3)
texto="km/l"
var=consumo and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:27:26) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=round(distancia/combustivel ,3)
texto="km/l"
var=consumo and texto
print(var)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:31:15) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var=consumo and texto
print(round(var), 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(var), 3)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:31:39) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var=consumo and texto
print(round(var, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(var, 3))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:29) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var=consumo + texto
print(round( , 3))
-- ERROR:
File "XXXX", line 6
    print(round( , 3))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:38) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var=consumo + texto
print(round(var, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=consumo + texto
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:33:07) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var=float(consumo) + texto
print(round(var, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=float(consumo) + texto
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:34:12) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(var, 3)+texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var, 3)+texto)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:34:52) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3)+texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3)+texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:36:06) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3)+ texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3)+ texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:36:49) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) and texto)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:41:06) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) and texto)
-- EXECUTION TIME:
0.156099
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:41:08) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) and texto)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:49:18) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3) + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:49:47) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(float(round(consumo, 3)) + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(consumo, 3)) + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:50:14) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3) + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:51:09) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3) + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:51:19) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) texto)
-- ERROR:
File "XXXX", line 5
    print(round(consumo, 3) texto)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:51:32) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:52:15) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1(round(consumo, 3))
print(var1 + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var1(round(consumo, 3))
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:52:35) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=(round(consumo, 3))
print(var1 + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(var1 + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:52:41) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=round(consumo, 3)
print(var1 + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(var1 + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:52:53) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=round(consumo, 3)
print(var1 and texto)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:53:23) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=round(consumo, 3)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:54:28) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=int(round(consumo, 3))
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:54:48) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=int(round(consumo, 3))
print(var1 + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(var1 + texto)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:54:58) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=int(round(consumo, 3))
print(var1 and texto)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:55:21) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=int(round(consumo, 3))
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:55:36) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=round(consumo, 3)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:56:21) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
var1=round(consumo, 3)
print(round(var1,3 and texto))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(var1,3 and texto))
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:56:48) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo,3 and texto))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo,3 and texto))
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:17) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo,3 in texto))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo,3 in texto))
TypeError: 'in <string>' requires string as left operand, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:33) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo,3 in<texto>))
-- ERROR:
File "XXXX", line 5
    print(round(consumo,3 in<texto>))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:43) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo,3 texto))
-- ERROR:
File "XXXX", line 5
    print(round(consumo,3 texto))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:50) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo,3 + texto))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo,3 + texto))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:59:26) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) + (texto))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3) + (texto))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:59:59) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) + texto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(consumo, 3) + texto)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:00:38) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3) and texto)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:13:50) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3),texto)
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:14:02) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3),texto)
-- EXECUTION TIME:
0.16158
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:14:18) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3),texto)
-- EXECUTION TIME:
0.139556
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:15:48) 
-- CODE:
distancia=float(input("Qual a distancia percorrida em km?"))
combustivel=float(input("Total de combustivel gasto em litros?"))
consumo=(distancia/combustivel)
texto="km/l"
print(round(consumo, 3),texto)
-- EXECUTION TIME:
0.138121
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
